Adding package icon to logo.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="header__content">
                 <div class="header__brand">
                     <div class="logo">
+                        <span class="logo__icon"><i data-feather="package" stroke-width="2.5"></i></span>
                         <span class="logo__text"><a href="#" onclick="showDashboard(); return false;" style="text-decoration:none;color:inherit;">Unbox your thinking</a></span>
                     </div>
                 </div>
