Minor UI tweaks.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                         <div class="modal__header-content">
                             <h3 class="modal__title" id="playgroundTitle"></h3>
                             <p class="modal__desc" id="playgroundDesc"></p>
+                            <div class="modal__tags" id="playgroundTags"></div>
                         </div>
                         <button class="modal__close" id="closePlayground">×</button>
                     </div>
