Updated prompts and roles.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,13 @@
                                 <!-- Will be populated by JavaScript -->
                             </select>
                         </div>
-                        
+                        <div class="filter-group">
+                            <label for="purposeFilter" class="form-label">Purpose</label>
+                            <select id="purposeFilter" class="form-control">
+                                <option value="">All Purposes</option>
+                                <!-- Will be populated by JavaScript -->
+                            </select>
+                        </div>
                         <div class="filter-group">
                             <label for="complexityFilter" class="form-label">Complexity</label>
                             <select id="complexityFilter" class="form-control">
@@ -123,7 +129,7 @@
                         <div class="modal__header-content">
                             <h3 class="modal__title" id="playgroundTitle"></h3>
                             <p class="modal__desc" id="playgroundDesc"></p>
-                            <div class="modal__tags" id="playgroundTags"></div>
+                            <div class="modal__purposes" id="playgroundPurposes"></div>
                         </div>
                         <button class="modal__close" id="closePlayground">×</button>
                     </div>
@@ -134,10 +140,10 @@
                                 <div id="variableInputs"></div>
                             </div>
                             <div class="modal__col modal__col--right">
-                                <div class="modal__col-header" style="display:flex;align-items:center;justify-content:space-between;margin-bottom:8px;">
+                                <div class="modal__col-header" style="display:flex;align-items:center;justify-content:space-between;margin-bottom:20px;">
                                     <h4 style="margin:0;">Generated Prompt</h4>
-                                    <button class="btn btn--outline copy-btn" id="copyPromptBtn" type="button" style="display:flex;align-items:center;gap:8px;">
-                                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="display:block;">
+                                    <button class="btn btn--outline copy-btn" id="copyPromptBtn" type="button" style="display:flex;align-items:center;gap:8px;font-size:14px;">
+                                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="display:block;">
                                             <rect x="9" y="9" width="13" height="13" rx="2" stroke="currentColor" stroke-width="2"/>
                                             <rect x="3" y="3" width="13" height="13" rx="2" stroke="currentColor" stroke-width="2"/>
                                         </svg>
