--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <p class="dashboard__subtitle">Smarter prompts. Sharper thinking. Better delivery.</p>
                     <div class="dashboard__intro">
                         <div class="dashboard__intro-text">
-                            Unbox Your Thinking is your team's launchpad for better problem-solving with Microsoft CoPilot. Tap into a curated library of prompts designed to unlock systems thinking across every phase of our value delivery framework—Strategy, Shaping, Discovery, Design & Delivery, and Measure & Learn.<br><br>
+                            Unbox Your Thinking is your team's launchpad for better problem-solving with Microsoft CoPilot. Tap into a curated library of prompts designed to unlock systems thinking across every work phase - Strategy, Shaping, Discovery, Design & Delivery, and Measure & Learn.<br><br>
                             Whether you're planning, building, or reflecting—this is where sharper thinking begins.
                         </div>
                         <div class="dashboard__intro-image">
